--- a/src/app/features/lms/grp/components/dashboard/components/landing-dashboard/landing-dashboard.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/landing-dashboard/landing-dashboard.component.css
@@ -186,6 +186,10 @@
     justify-content: space-between;
 }
 
+.box:nth-child(n + 5) {
+    margin-top: 20px;
+}
+
 .box:hover {
     background-color: rgb(156, 208, 244);
     cursor: pointer;
