--- a/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.html
@@ -509,7 +509,7 @@
                 </div>
             </div>
 
-            <div class="statement-desc" style="color: black;">Total account contributions <b>Ksh. 20,000,000</b></div>
+            <div class="statement-desc" style="color: black;">Total account contributions <b>{{ totalContributions | number }}</b></div>
             
         </div>
         <div class="modal-footer">
