VQ-2598 Claims Initiation APIs Consumption

--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
@@ -6,7 +6,6 @@
       [claimInitForm]="claimInitForm"
       [claim_types]="claim_types"
       (policyFiltered)="handlePolicyFiltered($event)"
-      (clientFiltered)="handleClientFiltered($event)"
     >
     </app-claims-options>
 
@@ -17,6 +16,9 @@
           [claimClients]="claimClients$"
           [causationTypes]="causationTypes$"
           [selectedPolicy]="selectedPolicy"
+          [eachStep]="eachStep"
+          (valueChanged)="onStepChange($event)"
+          [claimDetails$]="claimDetails$"
         >
         </app-death-claims>
       </ng-container>
