VQ-2325/Modify receipts summary CSS

--- a/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.html
@@ -487,23 +487,23 @@
                     <table class="receipt-table">
                         <tr>
                             <td class="table-label">Contribution:</td>
-                            <td class="table-label-desc">{{detailedMemContrReceipts[0]?.employer_amount | number}}</td>
+                            <td class="receipts-summary">{{detailedMemContrReceipts[0]?.employer_amount | number}}</td>
                         </tr>
                         <tr>
                             <td class="table-label">Trasfer amount:</td>
-                            <td class="table-label-desc">{{detailedMemContrReceipts[0]?.pnmdp_empyr_trans_amt | number}}</td>
+                            <td class="receipts-summary">{{detailedMemContrReceipts[0]?.pnmdp_empyr_trans_amt | number}}</td>
                         </tr>
                         <tr>
                             <td class="table-label">Annual voluntary contribution:</td>
-                            <td class="table-label-desc">{{detailedMemContrReceipts[0]?.pnmdp_empyr_trans_amt | number}}</td>
+                            <td class="receipts-summary">{{detailedMemContrReceipts[0]?.pnmdp_empyr_trans_amt | number}}</td>
                         </tr>
                         <tr>
                             <td class="table-label">Cost of benefits:</td>
-                            <td class="table-label-desc">{{detailedMemContrReceipts[0]?.cost_of_past_benefits | number}}</td>
+                            <td class="receipts-summary">{{detailedMemContrReceipts[0]?.cost_of_past_benefits | number}}</td>
                         </tr>
                         <tr>
                             <td class="table-label">Total contribution:</td>
-                            <td class="table-label-desc">{{detailedMemContrReceipts[0]?.total_amount | number}}</td>
+                            <td class="receipts-summary">{{detailedMemContrReceipts[0]?.total_amount | number}}</td>
                         </tr>
                     </table>
                 </div>
