VQ-2598 Claims Initiation APIs Consumption

--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/death-claims/death-claims.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/death-claims/death-claims.component.html
@@ -113,7 +113,7 @@
   </div>
   <!-- End of Claim Details -->
 </div>
-  <ng-container *ngIf="claimNo">
+  <ng-container *ngIf="claimResponse">
       <app-upload-documents
         [claimInitForm]="claimInitForm"
         [claimResponse]="claimResponse"
