--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/surrender-claims/surrender-claims.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/surrender-claims/surrender-claims.component.html
@@ -84,9 +84,12 @@
   </div>
   <!-- End of Claim Details -->
  </div>
-  <app-upload-documents
-    [claimInitForm]="claimInitForm">
-  </app-upload-documents>
+  <ng-container *ngIf="surClaim">
+    <app-upload-documents
+      [claimInitForm]="claimInitForm">
+    </app-upload-documents>
+  </ng-container>
+
 
   <!-- Proceed Button -->
   <div class="button-container">
