--- a/src/app/features/lms/grp/components/claims/components/payment-processing/payment-processing.component.css
+++ b/src/app/features/lms/grp/components/claims/components/payment-processing/payment-processing.component.css
@@ -46,3 +46,32 @@
   button.review-claim:hover {
     background-color: #65b2f5;
   }
+
+  /* CSS for X button, to close modal */
+ .modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.custom-red-button {
+  color: transparent;
+  background-color: transparent;
+  border: none;
+}
+
+.custom-red-button::before {
+  content: "X";
+  color: #EE3945;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+}
+
+/* End of CSS for X button, to close modal */
+
+.modal-header,
+.modal-footer {
+  border: none;
+  /* Removes the border between header/footer and body of modal */
+}
